# BackTestBench

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Dockerfile.fullstack  README.md  Task_6.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: dashboard.json  param_presets.yaml
config/strategies/: ma_crossover.yaml  ma_rsi.yaml  ma_rsi_composable.yaml  ma_trailing_composable.yaml  rsi_bounce_demo.yaml  rsi_threshold.yaml  (+2 more)
data/: runtime-dashboard.json
docs/: Product description.docx  README.md  analytics_data_model_specification.md  api_description.md  broker_adapter_description.md  core_perfomance_metrics.md  database_schema.md  interfaces_description.md  openapi.yaml  strategy_composable_engine_design.md  strategy_module_architecture.md  strategy_module_plugins_and_configuration.md  strategy_signal_and_position_rules.md
examples/: List_of_spots_bybit.txt  README.md  run_ma_crossover_demo.py  tbank_adapter_usage.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  next.config.ts  package-lock.json  package.json
reports/: BackTestBench_report_w1.docx  Week 4 report.md
scripts/: compose-up.ps1
src/: backtest_config.py  env_file.py  run_progress.py  stability.py  strategy_manifest.py  token_validation.py
tests/: optimization_moule-tester.py  test_bot_pipeline.py  test_env_file.py
transcriptions/: 06-07-26-customer.txt  07-06-26-customer.txt  13-07-26-customer.txt  14-06-26-customer.txt  22-06-26-customer.txt  29-06-26-customer.txt
(+129 files in other folders)
